First draft implementation of the messeger

--- a/app/Resources/views/default/messengerBird.html.twig
+++ b/app/Resources/views/default/messengerBird.html.twig
@@ -1,16 +1,110 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div>
-        <h2>Balance: {{ balance.amount }}</h2>
-    </div>
-    <div><h1>Stuur je bericht</h1></div>
-    <form action="/bird_messenger">
-        <div>
-            <input id="input_message" type="text" style="size:500">
-        </div>
-        <div>
-            <input type="submit" value="Stuur">
-        </div>
-    </form>
+<div class="half cf">
+    <h2>Balance: {{ balance.amount }}</h2>
+    <div><h1>Voer je bericht in</h1></div>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+        {{ dump(result) }}
+</div>
+{% endblock %}
+
+{% block stylesheets %}
+    <style>
+    @import "compass/css3";
+
+    @import url(http://fonts.googleapis.com/css?family=Merriweather);
+    $red: #e74c3c;
+
+    *,
+    *:before,
+    *:after {
+    @include box-sizing(border-box);
+    }
+
+    html, body {
+    background: #f1f1f1;
+    font-family: 'Merriweather', sans-serif;
+    padding: 1em;
+    }
+
+
+    h1 {
+    text-align: center;
+    color: #a8a8a8;
+    @include text-shadow(1px 1px 0 rgba(white, 1));
+    }
+
+    form {
+    max-width: 600px;
+    text-align: center;
+    margin: 20px auto;
+
+    input, textarea {
+    border:0; outline:0;
+    padding: 1em;
+    @include border-radius(8px);
+    display: block;
+    width: 100%;
+    margin-top: 1em;
+    font-family: 'Merriweather', sans-serif;
+    @include box-shadow(0 1px 1px rgba(black, 0.1));
+    resize: none;
+
+
+    &:focus {
+    @include box-shadow(0 0px 2px rgba($red, 1)!important);
+    }
+    }
+
+    input[type="submit"] {
+    color: white;
+    background: $red;
+    cursor: pointer;
+
+    &:hover {
+    @include box-shadow(0 1px 1px 1px rgba(#aaa, 0.6));
+    }
+    }
+
+    .half {
+    float:left; margin-bottom:1em; width:48%;
+
+    @media (max-width: 480px) {
+    .half {
+    width: 100%;
+    float: none;
+    margin-bottom: 0;
+    }
+    }
+
+    /* Clearfix */
+    .cf:before,
+    .cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+    }
+
+    .cf:after {
+    clear: both;
+    }
+
+    h2 {
+        text-align: left;
+        color: #a8a8a8;
+    @include text-shadow(1px 1px 0 rgba(#eee, 1));
+        border:0; outline:0;
+        padding: 1em;
+    @include border-radius(8px);
+        display: block;
+        background-color:#fff;
+        width: 100%;
+        margin-top: 1em;
+        font-family: 'Merriweather', sans-serif;
+    @include box-shadow(0 1px 1px rgba(black, 0.1));
+        resize: none;
+    }
+    </style>
 {% endblock %}
