Added cache system to send messages now or a little later to meet throughput requirements of the API. Fixes code style

--- a/app/Resources/views/default/messengerBird.html.twig
+++ b/app/Resources/views/default/messengerBird.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="half cf">
-    <h2>Balance: {{ balance.amount }}</h2>
+    <h2>Balance: {{ balance }}</h2>
     <div><h1>Voer je bericht in</h1></div>
         {{ form_start(form) }}
         {{ form_widget(form) }}
